@@ -1116,7 +1116,7 @@ Thanks to:
 		      <property name="n_columns">2</property>
 		      <property name="homogeneous">False</property>
 		      <property name="row_spacing">4</property>
-		      <property name="column_spacing">0</property>
+		      <property name="column_spacing">4</property>
 
 		      <child>
 			<widget class="GtkComboBox" id="subfolder_pattern">
@@ -1155,30 +1155,6 @@ artist - album</property>
 			  <property name="right_attach">1</property>
 			  <property name="top_attach">0</property>
 			  <property name="bottom_attach">1</property>
-			  <property name="y_options"></property>
-			</packing>
-		      </child>
-
-		      <child>
-			<widget class="GtkCheckButton" id="create_subfolders">
-			  <property name="visible">True</property>
-			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">Create subfolders: </property>
-			  <property name="use_underline">True</property>
-			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="focus_on_click">True</property>
-			  <property name="active">False</property>
-			  <property name="inconsistent">False</property>
-			  <property name="draw_indicator">True</property>
-			  <signal name="toggled" handler="on_create_subfolders_toggled"/>
-			</widget>
-			<packing>
-			  <property name="left_attach">0</property>
-			  <property name="right_attach">1</property>
-			  <property name="top_attach">2</property>
-			  <property name="bottom_attach">3</property>
-			  <property name="x_padding">12</property>
-			  <property name="x_options"></property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
@@ -1291,6 +1267,30 @@ artist - album</property>
 		      </child>
 
 		      <child>
+			<widget class="GtkCheckButton" id="create_subfolders">
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="label" translatable="yes">Create subfolders: </property>
+			  <property name="use_underline">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="focus_on_click">True</property>
+			  <property name="active">False</property>
+			  <property name="inconsistent">False</property>
+			  <property name="draw_indicator">True</property>
+			  <signal name="toggled" handler="on_create_subfolders_toggled"/>
+			</widget>
+			<packing>
+			  <property name="left_attach">0</property>
+			  <property name="right_attach">1</property>
+			  <property name="top_attach">2</property>
+			  <property name="bottom_attach">3</property>
+			  <property name="x_padding">12</property>
+			  <property name="x_options">fill</property>
+			  <property name="y_options"></property>
+			</packing>
+		      </child>
+
+		      <child>
 			<widget class="GtkCheckButton" id="delete_original">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
@@ -1308,7 +1308,8 @@ artist - album</property>
 			  <property name="right_attach">1</property>
 			  <property name="top_attach">3</property>
 			  <property name="bottom_attach">4</property>
-			  <property name="x_options"></property>
+			  <property name="x_padding">12</property>
+			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
@@ -2108,8 +2109,8 @@ Insanely High</property>
 			      <property name="n_rows">2</property>
 			      <property name="n_columns">2</property>
 			      <property name="homogeneous">False</property>
-			      <property name="row_spacing">0</property>
-			      <property name="column_spacing">0</property>
+			      <property name="row_spacing">4</property>
+			      <property name="column_spacing">4</property>
 
 			      <child>
 				<widget class="GtkLabel" id="label38">
@@ -2143,8 +2144,14 @@ Insanely High</property>
 			      <child>
 				<widget class="GtkComboBox" id="aac_quality">
 				  <property name="visible">True</property>
+				  <property name="items" translatable="yes">Very Low
+Low
+Normal
+High
+Very High</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
+				  <signal name="changed" handler="on_aac_quality_changed" last_modification_time="Sat, 13 Sep 2008 19:13:55 GMT"/>
 				</widget>
 				<packing>
 				  <property name="left_attach">1</property>
@@ -2185,7 +2192,7 @@ Insanely High</property>
 			  </child>
 			</widget>
 			<packing>
-			  <property name="padding">0</property>
+			  <property name="padding">4</property>
 			  <property name="expand">True</property>
 			  <property name="fill">True</property>
 			</packing>
